<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AboutFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_marginTop="@dimen/text_margin"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/col_name_img"
            android:layout_width="220dp"
            android:layout_height="220dp"
            android:scaleType="fitXY"
            android:src="@drawable/main_logo" />

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/mar_top"
            android:fontFamily="@font/lato_bold"
            android:text="@string/clz_name"
            android:textColor="@color/txtcolor"
            android:textSize="@dimen/title_size_large" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:layout_marginTop="@dimen/text_margin"
            android:fontFamily="@font/lato_light"
            android:text="@string/desc"
            android:textColor="@color/txtcolor"
            android:textSize="@dimen/text_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/text_margin">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:src="@drawable/label_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_bold"
                android:layout_gravity="center_vertical"
                android:text="Green Environment"
                android:layout_marginStart="@dimen/text_margin"
                android:textColor="@color/green"
                android:textSize="@dimen/title_size_large" />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/mar_top"
            android:fontFamily="@font/lato_bold"
            android:text="Our Cources"
            android:textColor="@color/txtcolor"
            android:textSize="@dimen/title_size_large" />
        <androidx.viewpager.widget.ViewPager
            android:id="@+id/course_viewPager"
            android:layout_marginTop="@dimen/text_margin"
            android:foregroundGravity="center"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:layout_width="match_parent"
            android:layout_height="250dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/text_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/mar_top"
                android:fontFamily="@font/lato_bold"
                android:text="Contact Details"
                android:textColor="@color/txtcolor"
                android:textSize="@dimen/title_size_large" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:layout_marginTop="@dimen/text_margin"
                android:fontFamily="@font/lato_light"
                android:text="@string/clz_name"
                android:textColor="@color/txtcolor"
                android:textSize="@dimen/text_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:layout_marginTop="@dimen/text_margin"
                android:fontFamily="@font/lato_light"
                android:text="@string/address"
                android:textColor="@color/txtcolor"
                android:textSize="@dimen/text_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:layout_marginTop="@dimen/text_margin"
                android:fontFamily="@font/lato_light"
                android:text="@string/clz_tel"
                android:textColor="@color/txtcolor"
                android:textSize="@dimen/text_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:layout_marginTop="@dimen/text_margin"
                android:fontFamily="@font/lato_light"
                android:text="@string/clz_fax"
                android:textColor="@color/txtcolor"
                android:textSize="@dimen/text_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:layout_marginTop="@dimen/text_margin"
                android:fontFamily="@font/lato_light"
                android:text="@string/clz_web"
                android:textColor="@color/txtcolor"
                android:textSize="@dimen/text_size" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:layout_marginTop="@dimen/text_margin"
                android:fontFamily="@font/lato_light"
                android:text="@string/clz_email"
                android:textColor="@color/txtcolor"
                android:textSize="@dimen/text_size" />
        </LinearLayout>
        <ImageView
            android:id="@+id/map_location2"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_marginTop="@dimen/text_margin"
            android:src="@drawable/map_default" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>