<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.smarteist.autoimageslider.SliderLayout
                android:id="@+id/images_slider"
                android:layout_width="match_parent"
                android:layout_height="250dp" />

            <TextView
                android:id="@+id/tv_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/mar_top"
                android:fontFamily="@font/lato_bold"
                android:text="@string/clz_name"
                android:textColor="@color/txtcolor"
                android:textSize="@dimen/title_size_large" />

            <TextView
                android:id="@+id/tv_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:layout_marginTop="@dimen/text_margin"
                android:fontFamily="@font/lato_light"
                android:text="@string/desc"
                android:textColor="@color/txtcolor"
                android:textSize="@dimen/text_size" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mar_top"
                android:background="@color/back_ground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/mar_top"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_faculty"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/text_margin"
                        android:fontFamily="@font/lato_bold"
                        android:text="Departments"
                        android:textColor="@color/txtcolor2"
                        android:textSize="@dimen/title_size_large" />

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="16dp"
                        android:background="@color/white">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/tv_faculty_se"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="@dimen/text_margin"
                                android:fontFamily="@font/lato_light"
                                android:text="Software Engineering"
                                android:textSize="@dimen/title_size_large" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/grey" />

                            <TextView
                                android:id="@+id/tv_faculty_ec"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginTop="@dimen/text_margin"
                                android:fontFamily="@font/lato_light"
                                android:text="E-Commerce"
                                android:textSize="@dimen/title_size_large" />


                        </LinearLayout>
                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/text_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/mar_top"
                    android:fontFamily="@font/lato_bold"
                    android:text="Contact Details"
                    android:textColor="@color/txtcolor"
                    android:textSize="@dimen/title_size_large" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:layout_marginTop="@dimen/text_margin"
                    android:fontFamily="@font/lato_light"
                    android:text="@string/clz_name"
                    android:textColor="@color/txtcolor"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:layout_marginTop="@dimen/text_margin"
                    android:fontFamily="@font/lato_light"
                    android:text="@string/address"
                    android:textColor="@color/txtcolor"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:layout_marginTop="@dimen/text_margin"
                    android:fontFamily="@font/lato_light"
                    android:text="@string/clz_tel"
                    android:textColor="@color/txtcolor"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:layout_marginTop="@dimen/text_margin"
                    android:fontFamily="@font/lato_light"
                    android:text="@string/clz_fax"
                    android:textColor="@color/txtcolor"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:layout_marginTop="@dimen/text_margin"
                    android:fontFamily="@font/lato_light"
                    android:text="@string/clz_web"
                    android:textColor="@color/txtcolor"
                    android:textSize="@dimen/text_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="@dimen/text_margin"
                    android:layout_marginTop="@dimen/text_margin"
                    android:fontFamily="@font/lato_light"
                    android:text="@string/clz_email"
                    android:textColor="@color/txtcolor"
                    android:textSize="@dimen/text_size" />
            </LinearLayout>

            <ImageView
                android:id="@+id/map_location"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                android:layout_marginTop="@dimen/text_margin"
                android:src="@drawable/map_default" />


        </LinearLayout>
    </ScrollView>
</FrameLayout>